--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,35 +1,16 @@
 <mat-drawer-container class="container">
   <mat-drawer #drawer class="sidenav" mode="side" opened="opened">
-    <nav>
-      <ul class="sidenav__list">
-        <li class="sidenav__list__item">
-          <mat-icon
-            class="sidenav__list__icon"
-            color="primary"
-            aria-hidden="false"
-            fontIcon="home"
-          ></mat-icon>
-          <a href="#">Home</a>
-        </li>
-        <li class="sidenav__list__item">
-          <mat-icon
-            class="sidenav__list__icon"
-            color="primary"
-            aria-hidden="false"
-            fontIcon="groups"
-          ></mat-icon
-          ><a href="#">Alumns</a>
-        </li>
-        <li class="sidenav__list__item">
-          <mat-icon
-            class="sidenav__list__icon"
-            color="primary"
-            aria-hidden="false"
-            fontIcon="toc"
-          ></mat-icon
-          ><a href="#">Courses</a>
-        </li>
-      </ul>
-    </nav>
+    <mat-nav-list>
+      <mat-list-item
+        class="sidenav__items"
+        *ngFor="let link of navigationLinks"
+        [activated]="link.isActive"
+      >
+        <a matListItemTitle [href]="link.href">{{ link.label }}</a>
+        <button mat-icon-button matListItemMeta>
+          <mat-icon>{{ link.icon }}</mat-icon>
+        </button>
+      </mat-list-item>
+    </mat-nav-list>
   </mat-drawer>
 </mat-drawer-container>
