new active link in sidebar

--- a/src/app/dashboard/layout/sidebar/sidebar.component.html
+++ b/src/app/dashboard/layout/sidebar/sidebar.component.html
@@ -4,7 +4,9 @@
       <mat-list-item
         class="sidenav__items"
         *ngFor="let link of navigationLinks"
-        [activated]="link.isActive"
+        routerLinkActive
+        #itemLink="routerLinkActive"
+        [activated]="itemLink.isActive"
         [routerLink]="link.href"
       >
         <a matListItemTitle routerLinkActive="router-link-active">{{
