--- a/src/app/dashboard/pages/professors/sub-pages/professor-detail/professor-detail.component.html
+++ b/src/app/dashboard/pages/professors/sub-pages/professor-detail/professor-detail.component.html
@@ -1,4 +1,5 @@
 <app-person-detail
-  [person$]="professor$"
+  *ngIf="professor$ | async as professor"
+  [person]="professor"
   [title]="pagetitle"
 ></app-person-detail>
