--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,20 @@
 <h1>Login</h1>
+<button
+  mat-icon-button
+  color="primary"
+  class="form__help-button"
+  [matMenuTriggerFor]="menu"
+>
+  <mat-icon>help</mat-icon>
+</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item (click)="autoComplete()">
+    <span>Admin credentials</span>
+  </button>
+  <button mat-menu-item disabled>
+    <span>Employee credentials</span>
+  </button>
+</mat-menu>
 <form [formGroup]="form" class="form">
   <mat-form-field class="form__field">
     <mat-label> Email </mat-label>
