--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -10,4 +10,9 @@
     display: flex;
     justify-content: space-around;
   }
+  &__help-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
 }
