--- a/src/app/dashboard/commons/person/components/person-table/person-table.component.html
+++ b/src/app/dashboard/commons/person/components/person-table/person-table.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z5 containers">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
+  <table mat-table class="full-width-table" matSort>
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
       <td mat-cell *matCellDef="let row">{{ row.id }}</td>
