--- a/src/app/dashboard/pages/courses/components/card/course-card.component.html
+++ b/src/app/dashboard/pages/courses/components/card/course-card.component.html
@@ -1,11 +1,16 @@
-<mat-card class="card">
+<mat-card class="card" [ngClass]="{ 'card--disabled': !course.available }">
   <mat-card-header>
     <mat-card-title-group>
       <mat-card-title>{{ course.title }}</mat-card-title>
       <mat-card-subtitle>{{
         course.available ? "Avaiable" : "Not available"
       }}</mat-card-subtitle>
-      <img mat-card-md-image [src]="course.imgUrl" [alt]="course.title" />
+      <img
+        mat-card-md-image
+        [src]="course.imgUrl"
+        [alt]="course.title"
+        style="object-fit: contain"
+      />
     </mat-card-title-group>
   </mat-card-header>
   <mat-card-content class="mt-3">
