--- a/src/app/dashboard/pages/students/components/student-detail/student-detail.component.scss
+++ b/src/app/dashboard/pages/students/components/student-detail/student-detail.component.scss
@@ -1,3 +1,16 @@
 :host {
   margin: 20px;
 }
+
+.empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  color: grey;
+  mat-icon {
+    font-size: 40px;
+    width: auto;
+    height: auto;
+  }
+}
