--- a/src/app/shared/components/confirm-snackbar/confirm-snackbar.component.html
+++ b/src/app/shared/components/confirm-snackbar/confirm-snackbar.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Want to delete?</h1>
+<h1 mat-dialog-title>{{ title }}</h1>
 <div mat-dialog-actions>
   <button mat-button (click)="closeDialog(false)">Cancel</button>
   <button mat-button color="warn" (click)="closeDialog(true)" cdkFocusInitial>
