--- a/src/app/dashboard/pages/professors/professors.component.html
+++ b/src/app/dashboard/pages/professors/professors.component.html
@@ -1,8 +1,10 @@
-<app-person
-  [title]="pageTitle"
-  [addButtonLabel]="buttonLabel"
-  [persons$]="professors$"
-  (onAdd)="newProfessor()"
-  (onEdit)="editProfessor($event)"
-  (onDelete)="deleteProfessor($event)"
-></app-person>
+<ng-container *ngIf="professors$ | async as professors">
+  <app-person
+    [title]="pageTitle"
+    [addButtonLabel]="buttonLabel"
+    [persons]="professors"
+    (onAdd)="newProfessor()"
+    (onEdit)="editProfessor($event)"
+    (onDelete)="deleteProfessor($event)"
+  ></app-person>
+</ng-container>
