--- a/src/app/dashboard/pages/students/students.component.html
+++ b/src/app/dashboard/pages/students/students.component.html
@@ -1,8 +1,10 @@
-<app-person
-  [title]="pageTitle"
-  [addButtonLabel]="buttonLabel"
-  [persons$]="students$"
-  (onAdd)="newStudent()"
-  (onEdit)="editStudent($event)"
-  (onDelete)="deleteStudent($event)"
-></app-person>
+<ng-container *ngIf="students$ | async as students">
+  <app-person
+    [title]="pageTitle"
+    [addButtonLabel]="buttonLabel"
+    [persons]="students"
+    (onAdd)="newStudent()"
+    (onEdit)="editStudent($event)"
+    (onDelete)="deleteStudent($event)"
+  ></app-person>
+</ng-container>
