--- a/src/app/dashboard/pages/courses/courses.component.html
+++ b/src/app/dashboard/pages/courses/courses.component.html
@@ -1,4 +1,3 @@
-<!-- <div class="container"> -->
 <h1 appTitle>Courses</h1>
 <div class="button">
   <button mat-raised-button color="primary" (click)="newCourse()">
@@ -6,15 +5,20 @@
     {{ "Create a new course" | uppercase }}
   </button>
 </div>
-<ng-container *ngIf="courses$ | async as courses">
-  <div class="row">
-    <div class="col-4 p-3" *ngFor="let course of courses">
-      <app-course-card
-        [course]="course"
-        (editCourse)="editCourse($event)"
-        (deleteCourse)="deleteCourse($event)"
-      ></app-course-card>
+<ng-container *ngIf="!(isLoading$ | async); else loading">
+  <ng-container *ngIf="courses$ | async as courses">
+    <div class="row">
+      <div class="col-4 p-3" *ngFor="let course of courses">
+        <app-course-card
+          [course]="course"
+          (editCourse)="editCourse($event)"
+          (deleteCourse)="deleteCourse($event)"
+        ></app-course-card>
+      </div>
     </div>
-  </div>
+  </ng-container>
 </ng-container>
-<!-- </div> -->
+
+<ng-template #loading>
+  <app-spinner></app-spinner>
+</ng-template>
