--- a/src/app/dashboard/pages/enrollments/enrollments.component.html
+++ b/src/app/dashboard/pages/enrollments/enrollments.component.html
@@ -4,7 +4,7 @@
     <mat-icon>add</mat-icon>{{ "New Enrollment" | titlecase }}
   </button>
 </div>
-<ng-container *ngIf="editionEnrollments$ | async as data">
+<ng-container *ngIf="editionEnrollments$ | async as data; else loading">
   <app-enrollment-table
     [dataSource]="getFilterData(data)"
     (addStudent)="onAddStudent($event)"
