--- a/src/app/dashboard/pages/professors/professors.component.html
+++ b/src/app/dashboard/pages/professors/professors.component.html
@@ -1,16 +1,9 @@
-<ng-container *ngIf="!(isLoading$ | async); else loading">
-  <ng-container *ngIf="professors$ | async as professors">
-    <app-person
-      [title]="pageTitle"
-      [addButtonLabel]="buttonLabel"
-      [persons]="professors"
-      (onAdd)="newProfessor()"
-      (onEdit)="editProfessor($event)"
-      (onDelete)="deleteProfessor($event)"
-    ></app-person>
-  </ng-container>
-</ng-container>
-
-<ng-template #loading>
-  <app-spinner></app-spinner>
-</ng-template>
+<app-person
+  [title]="pageTitle"
+  [addButtonLabel]="buttonLabel"
+  [persons]="(professors$ | async) || []"
+  [isLoading]="!!(isLoading$ | async)"
+  (onAdd)="newProfessor()"
+  (onEdit)="editProfessor($event)"
+  (onDelete)="deleteProfessor($event)"
+></app-person>
