--- a/src/app/dashboard/pages/students/students.component.html
+++ b/src/app/dashboard/pages/students/students.component.html
@@ -1,16 +1,9 @@
-<ng-container *ngIf="!(isLoading$ | async); else loading">
-  <ng-container *ngIf="students$ | async as students">
-    <app-person
-      [title]="pageTitle"
-      [addButtonLabel]="buttonLabel"
-      [persons]="students"
-      (onAdd)="newStudent()"
-      (onEdit)="editStudent($event)"
-      (onDelete)="deleteStudent($event)"
-    ></app-person>
-  </ng-container>
-</ng-container>
-
-<ng-template #loading>
-  <app-spinner></app-spinner>
-</ng-template>
+<app-person
+  [title]="pageTitle"
+  [addButtonLabel]="buttonLabel"
+  [persons]="(students$ | async) || []"
+  [isLoading]="!!(isLoading$ | async)"
+  (onAdd)="newStudent()"
+  (onEdit)="editStudent($event)"
+  (onDelete)="deleteStudent($event)"
+></app-person>
